--- a/test.html
+++ b/test.html
@@ -23,9 +23,9 @@
   <script type='text/javascript' src='lib/closure-library/closure/goog/base.js'></script>
   <script type='text/javascript' src='lib/jquery-1.11.3.min.js'></script>
   <script type='text/javascript' src='lib/seedrandom.min.js'></script>
-  <script type='text/javascript' src='bin/topos.js'></script>
+  <script type='text/javascript' src='bin/test.js'></script>
   <script type='text/javascript'>
-    goog.require('topos.main');
-    topos.main.Start();
+    goog.require('topos.test');
+    topos.test.Start();
   </script>
 </html>
