include webgl-debug.js

--- a/test.html
+++ b/test.html
@@ -23,6 +23,7 @@
   <script type='text/javascript' src='lib/closure-library/closure/goog/base.js'></script>
   <script type='text/javascript' src='lib/jquery-1.11.3.min.js'></script>
   <script type='text/javascript' src='lib/seedrandom.min.js'></script>
+  <script type='text/javascript' src='lib/webgl-debug.js'></script>
   <script type='text/javascript' src='bin/test.js'></script>
   <script type='text/javascript'>
     goog.require('topos.test');
